[gd_scene load_steps=2 format=3 uid="uid://lloqtgwr4eah"]

[ext_resource type="Script" uid="uid://dro1k8axqa3cs" path="res://Game/Scripts/main_menu.gd" id="1_m2k3p"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m2k3p")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -100.0
offset_right = 128.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Sylvan Spellbinder"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(256, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Continue Game"

[node name="NewGameButton" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(256, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "New Game"

[node name="SettingsButton" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(256, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="ExitButton" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(256, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Exit"
